# spring83

./: Dockerfile  README.md  docker-compose.yml
client/: .prettierrc  package-lock.json  package.json
client/src/: app.html  hooks.server.ts
client/src/lib/: modal.scss
client/src/lib/components/: AssignKeys.svelte  Board.svelte  Button.svelte  CreateBoard.svelte  EmptyState.svelte  Header.svelte  InfoPopOver.svelte  LoginModal.svelte  MasonryGrid.svelte  MobileNavigation.svelte  Modal.svelte  RegisterModal.svelte  SignBoard.svelte  ToastNotification.svelte
client/src/lib/models/: board.model.ts
client/src/lib/stores/: board_count.store.ts  loading.store.ts  modal.store.ts  toast.store.ts  user.store.ts
client/src/routes/: +error.svelte  +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
client/src/routes/about/: +page.svelte
client/src/routes/board/[id]/: +page.server.ts  +page.svelte
client/src/routes/following/: +page.server.ts  +page.svelte
client/src/routes/generate/: +page.svelte
client/src/routes/submit/: +page.svelte
generator/src/: main.rs
server/: .env  .gitignore  Cargo.toml  protocol.md
server/src/: main.rs  routes.rs  services.rs
server/src/assets/: introduction.html
server/src/routes/: auth_routes.rs  boards_routes.rs  deny_list_routes.rs  route_utils.rs
server/src/services/: auth.rs  boards.rs  deny_list.rs  models.rs  service_utils.rs
