[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
tokio = { version = "1.26.0", features = ["full"] } 
hyper = { version = "0.14.25", features = ["full"] }
tower = "0.4.13"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
dotenvy = "0.15"
chrono = { version = "0.4.19", features = ["serde"] }
bcrypt = "0.14.0"
rand = "0.8.4"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.1"
hex = "0.4.3"
tower-http = { version = "0.4.0", features = ["cors"] }
regex = "1.8.4"
tl = "0.7.7"